# FlowEquationInterface

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING.md  FILESTRUCTURE.md  LICENSE.md  README.md  TODO.md  sonar-project.properties
.github/workflows/: ci.yml  sonarcloud.yml
app/: CMakeLists.txt  flowequations_app.cpp
cmake/: flowequationsConfig.cmake.in
examples/: CMakeLists.txt  main.cpp
examples/include/: lorentz_attractor_flow_equation.hpp  lorentz_attractor_jacobian_equation.hpp
examples/src/: lorentz_attractor_flow_equation.cu  lorentz_attractor_jacobian_equation.cu
include/flowequations/: flow_equation.hpp  flow_equation_system.hpp  flowequations.hpp  jacobian_equation.hpp
src/: CMakeLists.txt  flow_equation.cu  flowequations.cpp  jacobian_equation.cu
tests/: CMakeLists.txt  flowequations_t.cpp
